tools/tests/errors/regex_lookahead.ki
var regex = import("regex")
discard regex.compile("a(?=b)")
